add testdox to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pydantic==2.7.1
 pydantic_core==2.18.2
 Pygments==2.18.0
 pytest==8.2.0
+pytest-testdox==3.1.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
